# get-my-domino

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  config.full.toml  config.schema.json  config.toml.example  pyproject.toml
docs/: README.md  domino-site-structure.md
scripts/: debug-speech-normalize-audio.sh
src/get_my_domino/: __init__.py  __main__.py  audio.py  audiobook.py  audiobook_naming.py  browser_auth.py  cli.py  config.py  extract.py  models.py  session_store.py  speech_normalize.py  storage.py  web.py
src/get_my_domino/prompts/: __init__.py  speech-normalize-codex.txt
tests/: test_audiobook.py  test_cli.py  test_packaging.py  test_storage.py
