[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "get-my-domino"
version = "0.1.0"
description = "Download rivistadomino.it articles as clean HTML, text, RTF, and Siri audio."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Marco Massari Calderone", email = "marco@marcomc.com" }
]
dependencies = [
  "beautifulsoup4>=4.12.0",
  "requests>=2.33.1",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.40.0",
]
dev = [
  "mypy>=1.11.0",
  "playwright>=1.40.0",
  "pytest>=8.3.0",
  "ruff>=0.11.0",
  "types-requests>=2.33.0.20260408",
]

[project.scripts]
get-my-domino = "get_my_domino.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
get_my_domino = ["prompts/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
strict = true
